samples/bad7.decaf

class Cow extends Animal {
  bool isSpotted;
  bool IsSpottedCow() {
    return isSpotted;
  }
}


void main() {
  class Cow betsy;
  betsy = New(Cow, true);
  
  betsy.IsSpottedCow(5, break);
}
      


